<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ScanResultActivity">

    <TextView
        android:textColor="@color/gelap"
        android:textStyle="bold"
        android:textSize="40sp"
        android:text="@string/hasilScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:textColor="@color/gelap"
        android:layout_marginTop="50sp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="@string/kode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:textColor="@color/gelap"
        android:textAlignment="center"
        android:id="@+id/tvkodeBarcode"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/kode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:textColor="@color/gelap"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="@string/waktu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:textColor="@color/gelap"
        android:id="@+id/tvwaktuScan"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/waktu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:textColor="@color/gelap"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="@string/lokasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:textColor="@color/gelap"
        android:id="@+id/tvlokasiScan"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/lokasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:paddingHorizontal="30sp"
        android:drawableLeft="@drawable/ic_check_black_24dp"
        android:id="@+id/btnSimpanScan"
        android:layout_marginTop="80sp"
        android:backgroundTint="@color/ijo"
        android:textSize="20sp"
        android:text="@string/simpan"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>
</LinearLayout>