<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_bawah"
    android:weightSum="5">

    <TextView
        android:layout_marginStart="5sp"
        android:id="@+id/tvTxtPertanyaan"
        android:gravity="center_vertical"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/pertanyaan"
        android:layout_weight="3"
        android:layout_width="0dp"
        android:layout_height="60dp"/>

    <RadioGroup
        android:id="@+id/rgPertanyaan"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:layout_width="0dp"
        android:weightSum="2"
        android:layout_height="match_parent">
        <RadioButton
            android:id="@+id/rbYa"
            android:layout_weight="1"
            android:text="@string/Ya"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <RadioButton
            android:id="@+id/rbTidak"
            android:layout_weight="1"
            android:text="@string/Tidak"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </RadioGroup>
</LinearLayout>