<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_weight="10"
    android:layout_height="match_parent"
    tools:context=".TidakScanActivity">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="9"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:textSize="35sp"
            android:textColor="@color/gelap"
            android:gravity="center"
            android:text="@string/cant_scan2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="30dp"
            android:id="@+id/tvCLokasi"
            android:textSize="30sp"
            android:textColor="@color/gelap"
            android:gravity="center"
            android:text="@string/lokasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/gelap"
            android:gravity="center"
            android:text="@string/waktu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvCWaktu"
            android:textSize="20sp"
            android:textColor="@color/gelap"
            android:gravity="center"
            android:text="@string/waktu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/gelap"
            android:gravity="center"
            android:text="@string/koordinat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvCKoordinat"
            android:textSize="20sp"
            android:textColor="@color/gelap"
            android:gravity="center"
            android:text="@string/koordinat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:weightSum="10"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            tools:ignore="NestedWeights">
            <Button
                android:drawableLeft="@drawable/ic_arrow_back_white24dp"
                android:id="@+id/btNoscanBack"
                android:textSize="17sp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <Button
                android:drawableLeft="@drawable/ic_check_black_24dp"
                android:id="@+id/btConfirm"
                android:textSize="17sp"
                android:backgroundTint="@color/ijo_muda"
                android:text="@string/confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>