<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:fillViewport="true"
    android:layout_height="match_parent"
    tools:context=".TemuanActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginTop="20sp"
                android:textSize="40sp"
                android:textStyle="bold"
                android:text="@string/lokasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvLokasiTemuan"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/lokasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginTop="50sp"
            android:gravity="center|top"
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:maxLines="11"
                android:padding="10sp"
                android:background="@drawable/border_et"
                android:gravity="top"
                android:layout_weight="9"
                android:id="@+id/etTemuan"
                android:scrollbars="vertical"
                android:inputType="text|textMultiLine"
                android:layout_width="0dp"
                android:layout_height="200sp"
                android:hint="@string/Mtemuan"
                />
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:id="@+id/ll_forImage"
            android:layout_width="match_parent"
            android:layout_height="100sp">

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="10"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnAddImage"
                android:textColor="@color/gelap"
                android:text="@string/image"
                android:backgroundTint="@color/putihAbu"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="50sp"/>
            <View
                android:id="@+id/v_penengah"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="50sp"/>
            <Button
                android:id="@+id/btnSaveTemuan"
                android:backgroundTint="@color/ijo"
                android:text="@string/simpan"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="50sp"/>
        </LinearLayout>
        <LinearLayout
            android:weightSum="10"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btNotemuan"
                android:text="@string/no_temuan"
                android:backgroundTint="@color/merah"
                android:layout_weight="9"
                android:layout_width="0dp"
                android:layout_height="50sp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>