<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:id="@+id/ll_posActivity"
    android:layout_height="match_parent"
    tools:context=".PosActivity">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <ProgressBar
        android:id="@+id/pbPos"
        android:layout_marginTop="20sp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/ll_posItem"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textSize="50sp"
            android:textStyle="bold"
            android:text="@string/posnum"
            android:id="@+id/tvPosnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginBottom="30sp"
            android:textSize="25sp"
            android:text="@string/posnum"
            android:id="@+id/tvPosnumSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="20sp"
            android:layout_width="300sp"
            android:clickable="true"
            android:id="@+id/cvScan"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_height="100sp">
            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/ivCvscan"
                    android:foregroundGravity="left"
                    android:layout_marginRight="15dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_barcode"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>
                <TextView
                    android:id="@+id/tvCvscan"
                    android:textColor="@color/gelap"
                    android:textSize="30sp"
                    android:layout_gravity="center"
                    android:text="@string/scan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <Button
            android:id="@+id/btCantScan"
            android:drawableLeft="@drawable/ic_error_outline_black_24dp"
            android:textAllCaps="false"
            android:layout_marginTop="10sp"
            android:textColor="@color/gelap"
            android:text="@string/cant_scan"
            android:backgroundTint="@color/putih"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.cardview.widget.CardView
            android:layout_marginTop="15sp"
            app:cardCornerRadius="20sp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:id="@+id/cvPertanyaan"
            android:layout_width="300sp"
            android:layout_height="100sp">
            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/ivCvask"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/ic_todo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>
                <TextView
                    android:id="@+id/tvCvask"
                    android:textColor="@color/gelap"
                    android:textSize="30sp"
                    android:layout_gravity="center"
                    android:text="@string/pertanyaan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_marginTop="15sp"
            app:cardCornerRadius="20sp"
            android:layout_width="300sp"
            android:clickable="true"
            android:id="@+id/cvTemuan"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_height="100sp">
            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/ivCvfound"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/ic_temuan"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>
                <TextView
                    android:id="@+id/tvCvfound"
                    android:textColor="@color/gelap"
                    android:textSize="30sp"
                    android:layout_gravity="center"
                    android:text="@string/temuan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <Button
            android:drawableLeft="@drawable/ic_arrow_back_white24dp"
            android:id="@+id/btPosback"
            android:textSize="17sp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/back"
            android:layout_marginTop="50sp"
            android:layout_width="200sp"
            android:layout_height="60sp"/>
    </LinearLayout>
    </LinearLayout>
</ScrollView>