<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:background="@color/bprimary"
            android:paddingBottom="50dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/putih"
                android:layout_marginTop="20sp"
                android:textStyle="bold"
                android:textSize="40sp"
                android:text="@string/patroli"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <androidx.cardview.widget.CardView
                android:layout_marginTop="20dp"
                android:layout_width="100dp"
                app:cardCornerRadius="50dp"
                android:layout_height="100dp">
                <ImageView
                    android:id="@+id/ivProfile"
                    android:src="@drawable/help_map"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:maxEms="25"
                android:singleLine="true"
                android:ellipsize="end"
                android:id="@+id/tvNama"
                android:text="@string/temuan"
                android:textColor="@color/putihAbu"
                android:textSize="20sp"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:paddingBottom="10dp"
            android:gravity="center"
            android:id="@+id/LL_main"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginTop="25sp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/txtMain1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <GridView
                android:paddingBottom="10dp"
                android:gravity="center"
                android:clipToPadding="false"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="10sp"
                android:layout_marginTop="20sp"
                android:layout_gravity="center"
                android:id="@+id/gridview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnWidth="100dp"
                android:numColumns="auto_fit"
                android:verticalSpacing="10dp"
                android:stretchMode="columnWidth"
                android:horizontalSpacing="10dp"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>