<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">
    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_marginTop="20dp"
            android:layout_width="210dp"
            app:cardCornerRadius="110dp"
            android:layout_height="235dp">
            <ImageView
                android:scaleType="fitXY"
                android:id="@+id/ivProfile2"
                android:src="@drawable/help_map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="30sp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16sp"
            android:text="@string/noindNama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:singleLine="true"
            android:maxEms="25"
            android:ellipsize="end"
            android:id="@+id/tvPnama"
            android:textColor="@color/gelap"
            android:textSize="20sp"
            android:text="@string/noindNama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30sp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16sp"
            android:text="@string/shift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvPshift"
            android:textColor="@color/gelap"
            android:textSize="22sp"
            android:text="@string/shift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_alignParentBottom="true"
            android:weightSum="10"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/btLogout"
                android:backgroundTint="@color/merah"
                android:layout_marginBottom="20sp"
                android:layout_weight="7"
                app:cardCornerRadius="25dp"
                android:layout_width="0dp"
                android:layout_height="50sp">
                <TextView
                    android:textColor="@color/putih"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:text="@string/logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>